# Zefoy-Automation

./: .gitignore  LICENSE  README.md  __init__.py  install.py  install_chromedriver.py  main.py  pyproject.toml  requirements.txt  run.py  tui_main.py
browser/: automation.py  captcha_solver.py  js_injections.py  popup_handlers.py
learning/: learn.md  que.md
learning/livecounts-api-reverse-main/: 48387aa08817f3f4.js  README.md  main.py
learning/zefoy-reversed-main/: README.md
learning/zefoy-reversed-main/Generating Payloads/: README.md
learning/zefoy-reversed-main/Generating Payloads/Captcha Payload/: README.md
learning/zefoy-reversed-main/Generating Payloads/Captcha Payload/Captcha Encoded/: README.md
learning/zefoy-reversed-main/Generating Payloads/Captcha Payload/Second Key Generation/: README.md
learning/zefoy-reversed-main/Intercepting Requests/: README.md
learning/zefoy-reversed-main/Signing Requests/: README.md
plan/: v3.2.0-features.md
services/: base_service.py  comment_hearts.py  favorites.py  hearts.py
src/: __init__.py  actions.py  bot.py  config.py  driver_manager.py  exceptions.py  logger.py  services.py  validators.py
tests/: test_detection.py  test_integration.py  test_js_injections.py  test_popup_handlers.py  test_services.py  test_timer.py
tui/: __init__.py  app.py
utils/: colors.py  config.py  credits.py  fingerprint.py  health_check.py  livecounts.py  notifications.py  timer.py
